--- a/sht/assets/style.css
+++ b/sht/assets/style.css
@@ -25,19 +25,35 @@ button{ background: none; border: none;}
 
 /* form */
 .form-group{ margin-bottom: 20px;}
-.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio]{ margin-left: 0;}
-.checkbox, radio{ margin-top: 0; margin-bottom: 0;}
-.checkbox input{ margin-right: 10px;}
-.checkbox label{ position: relative; top: 3px; display: inline-block; width: 16px; height: 16px;}
-.checkbox label:before{ content: ""; position: absolute; top: 0; left: 0; display: block; width: 100%; height: 100%; border: 1px solid #D7D7D7; border-radius: 3px; background: #fff;} 
-.checkbox.checked label:before,
-.table.checked-all .checkbox label:before{ font-family: 'icomoon'; content: "\e908"; padding: 2px; border-color: #3A89DD; background-color: #3A89DD; text-align: center; font-size: 11px; color: #fff;}
+
 
 .table>tbody>tr>td{ vertical-align: middle; border-top-color: #DEEAF6;}
 .table>thead>tr>th{ border-bottom-color: #DEEAF6;}
 .table-striped>tbody>tr:nth-of-type(odd){ background-color: #F5F9FD;}
 .table-striped>tbody>tr:hover{ background-color: #E5EEF7;}
 
+/* checkbox & raido */
+.icheckbox,
+.iradio{ position: relative; top: -3px;}
+
+.icheckbox input[type="checkbox"],
+.iradio input[type=radio]{ position: relative; left: 0; top: 2px; width: 18px; height: 18px; z-index: 1; opacity: 0;}
+.iradio input[type=radio]{ top: 0;  width: 16px; height: 16px; }
+
+.icheckbox input[type="checkbox"] + label,
+.iradio input[type=radio] + label{ font-weight: 400;}
+
+.icheckbox input[type="checkbox"] + label.text{ padding-left: 5px;}
+
+.icheckbox input[type="checkbox"] + label:before,
+.icheckbox input[type="checkbox"]:checked + label:after{ position: absolute; top: -1px; left: 0; display: inline-block; content: ""; width: 18px; height: 18px; border: 1px solid #D7D7D7; border-radius: 3px; background: #fff; }
+.icheckbox input[type="checkbox"]:checked + label:after{ font-family: 'icomoon'; content: "\e908"; border-color: #3A89DD; background-color: #3A89DD; text-align: center; font-size: 12px; color: #fff;}
+
+.iradio input[type=radio] + label:before,
+.iradio input[type=radio]:checked + label:after{ position: absolute; top: 0; left: 0; display: inline-block; content: ""; width: 16px; height: 16px; border: 1px solid #D7D7D7; border-radius: 50%; background: #fff; z-index: 0;}
+.iradio input[type=radio]:checked + label:after{ border: 5px solid #3A89DD; background: none;}
+
+.icheckbox.checked-all input[type="checkbox"]{}
 
 /* tabs */
 .nav-tabs{ position: relative; margin-right: 0; background: #fff; border-bottom: 1px solid #DEEAF6; border-radius: 3px 3px 0 0;}
@@ -238,3 +254,7 @@ button{ background: none; border: none;}
 .error .info .form-inline .form-control{ display: inline-block; width: auto;}
 
 .error-404 .info .icon{ width: 196px; height: 91px; background: url(img/icon-404@2x.png) no-repeat center center; background-size: contain; text-indent: -1000vw;}
+
+/**** components ****/
+.components{ padding-top: inherit; background: none;}
+
