--- a/sht/assets/style.css
+++ b/sht/assets/style.css
@@ -248,6 +248,7 @@ button:hover{ opacity: .8;}
 
 /**** login ****/
 .login{ text-align: center; padding: 0; background-image: url(img/wallpaper.jpg); background-position: left top; background-size: cover;}
+.login .form-control{ width: 100%;}
 .login #logo{ display: block; margin: 0 auto 20px; width: 100%; height: 50px; background: url(img/logo-login@2x.png) no-repeat center center; background-size: contain; text-indent: -200vw;}
 .login .slogan{ display: block; padding: 20px 0; color: #fff; font-weight: 300;}
 .login .slogan big+big{ margin-left: 40px;}
