--- a/sht/assets/style.css
+++ b/sht/assets/style.css
@@ -31,8 +31,14 @@ button:hover{ opacity: .8;}
 
 /* form */
 .form-group.dropdown{ margin-bottom: 0;}
-.form-control{ width: auto;}
 .form-horizontal .form-group{ margin-left: inherit; margin-right: inherit;}
+.form-error{ border-color: #ED5566;}
+.form-group .text{ display: inline-block; margin-top: 5px; color: #999;}
+.form-group .text-error{ color: #ED5566;}
+
+@media (min-width: 768px) {
+.form-control{ width: auto;}
+}
 
 /* table */
 .table-responsive{ border: none; overflow: inherit;}
@@ -161,11 +167,11 @@ button:hover{ opacity: .8;}
 .nav .open>a:focus,
 .nav .open>a:hover{ background: none;}
 .text-grey{ color: #999;}
-.text-red{ color: #f00;}
+.text-red{ color: #ED5566;}
 .pipe{ margin: 0 10px;}
 
 .panel{ padding: 15px 20px; background: #fff; border-radius: 3px; border: none;}
-.panel-title{ padding-bottom: 15px; border-bottom: 1px solid #DEEAF6; font-size: 18px; font-weight: 400;}
+.panel-title{ padding-bottom: 15px; border-bottom: 1px solid #DEEAF6; font-size: 18px; font-weight: 400; color: #333;}
 .panel-body{ padding: 0; min-height: 100px;}
 .panel .list{ line-height: 2;}
 .panel .list p span{ display: block;}
@@ -291,5 +297,12 @@ button:hover{ opacity: .8;}
 .error-404 .info .icon{ width: 196px; height: 91px; background: url(img/icon-404@2x.png) no-repeat center center; background-size: contain; text-indent: -1000vw;}
 
 /**** components ****/
-.components{ padding-top: inherit; background: none;}
-
+.components{ padding-top: inherit; padding: 20px; background: none;}
+/* colors */
+.colors span{ display: inline-block; text-align: center; color: #999;}
+.colors span+span{ margin-left: 10px;}
+.colors span:before{ content: ""; display: block; width: 80px; height: 80px; background-color: #125FB2;}
+.colors span.dark:before{ background-color: #244466;}
+.colors span.light:before{ background-color: #3A89DD;}
+.colors span.green:before{ background-color: #00B894;}
+.colors span.grey:before{ background-color: #DEEAF6;}
