--- a/sht/assets/style.css
+++ b/sht/assets/style.css
@@ -1,4 +1,4 @@
-body{ padding-top: 90px; background: #246 url(img/inset-body@2x.png) no-repeat left bottom; background-size: auto 272px; background-attachment: fixed; line-height: 1.6;}
+body{ min-height: 900px; padding-top: 90px; background: #246 url(img/inset-body@2x.png) no-repeat left bottom; background-size: auto 272px; background-attachment: fixed; line-height: 1.6;}
 
 a{ color: #3A89DD;}
 a:hover{ text-decoration: none; opacity: .8;}
@@ -35,6 +35,8 @@ button:hover{ opacity: .8;}
 .form-error{ border-color: #ED5566;}
 .form-group .text-note{ display: inline-block; margin-top: 5px; color: #999;}
 .form-group .text-error{ color: #ED5566;}
+.form-control-sm{ padding: 0 3px; height: 30px; line-height: 30px; border: 1px solid #DFDFDF; border-radius: 3px;}
+.form-control-sm:focus{ outline: none;}
 
 @media (min-width: 768px) {
 .form-control{ width: auto;}
@@ -128,6 +130,7 @@ button:hover{ opacity: .8;}
 .list-file .list-group-item .list-title{ color: #666;}
 .list-file .list-group-item .btn.pull-right{ position: relative; top: -4px;}
 .list-file .list-group-item .list-title .icon{ color: #999;}
+.list-file .list-group-item .list-title .form-control-sm{ min-width: 180px;}
 
 /* modal-dialog */
 .modal-dialog{}
@@ -194,10 +197,11 @@ button:hover{ opacity: .8;}
 }
 
 /* sidebar */
-.sidebar{ padding: 18px 0;}
+.sidebar{ position: absolute; top: 90px; left: 0; padding: 18px 0;}
 
-.site-nav-body{ display: block; height: 100%; overflow: visible;}
+.site-nav-body{ width: auto; height: 100%; overflow: visible;}
 
+.site-nav{ min-height: 2000px;}
 .site-nav .nav-item{ position: relative;}
 .site-nav .nav-item a{ display: block; padding: 12px 10px 12px 20px; color: #DEDEDE;}
 .site-nav .nav-item a:hover, .site-nav .nav-item.dropdown.open a, .sidebar .nav li.active a{ background-color: #125FB2; color: #fff;}
@@ -225,7 +229,7 @@ button:hover{ opacity: .8;}
 .sidebar.slim .site-nav .nav-item .btn-menu .icon-menu:before{ content: "\e924";}
 
 @media (min-width: 768px) {
-.sidebar{ position: fixed; top: 90px; bottom: 0;left: 0; z-index: 1000; display: block; width: 180px;}
+.sidebar{ position: fixed; top: 90px; left: 0; z-index: 1000; display: block; width: 180px; height: 2000px;}
 .site-nav .nav-item .dropdown-menu{ top: 0; left: 180px; min-width: 100%; }
 
 .sidebar.slim .site-nav .nav-item .dropdown-menu{ left: 56px; min-width: 180px;}
@@ -308,3 +312,7 @@ button:hover{ opacity: .8;}
 .colors span.light:before{ background-color: #3A89DD;}
 .colors span.green:before{ background-color: #00B894;}
 .colors span.grey:before{ background-color: #DEEAF6;}
+
+
+/**** non-responsive ****/
+body{ min-width: 970px;}
