--- a/sht/assets/style.css
+++ b/sht/assets/style.css
@@ -1,4 +1,4 @@
-body{ min-height: 900px; padding-top: 90px; background: #246 url(img/inset-body@2x.png) no-repeat left bottom; background-size: auto 272px; background-attachment: fixed; line-height: 1.6;}
+body{ min-height: 600px; padding-top: 90px; background: #246 url(img/inset-body@2x.png) no-repeat left bottom; background-size: auto 272px; background-attachment: fixed; line-height: 1.6;}
 
 a{ color: #3A89DD;}
 a:hover{ text-decoration: none; opacity: .8;}
@@ -35,7 +35,7 @@ button:hover{ opacity: .8;}
 .form-error{ border-color: #ED5566;}
 .form-group .text-note{ display: inline-block; margin-top: 5px; color: #999;}
 .form-group .text-error{ color: #ED5566;}
-.form-control-sm{ padding: 0 3px; height: 30px; line-height: 30px; border: 1px solid #DFDFDF; border-radius: 3px;}
+.form-control-sm{ padding: 0 3px; height: 31px; line-height: 31px; border: 1px solid #DFDFDF; border-radius: 3px;}
 .form-control-sm:focus{ outline: none;}
 
 @media (min-width: 768px) {
@@ -197,11 +197,11 @@ button:hover{ opacity: .8;}
 }
 
 /* sidebar */
-.sidebar{ position: absolute; top: 90px; left: 0; padding: 18px 0;}
+.sidebar{ padding: 18px 0;}
 
-.site-nav-body{ width: auto; height: 100%; overflow: visible;}
+.site-nav-body{}
 
-.site-nav{ min-height: 2000px;}
+.site-nav{ height: 1000px;}
 .site-nav .nav-item{ position: relative;}
 .site-nav .nav-item a{ display: block; padding: 12px 10px 12px 20px; color: #DEDEDE;}
 .site-nav .nav-item a:hover, .site-nav .nav-item.dropdown.open a, .sidebar .nav li.active a{ background-color: #125FB2; color: #fff;}
@@ -229,7 +229,7 @@ button:hover{ opacity: .8;}
 .sidebar.slim .site-nav .nav-item .btn-menu .icon-menu:before{ content: "\e924";}
 
 @media (min-width: 768px) {
-.sidebar{ position: fixed; top: 90px; left: 0; z-index: 1000; display: block; width: 180px; height: 2000px;}
+.sidebar{ position: fixed; top: 90px; bottom: 0; left: 0; z-index: 1000; display: block; width: 180px; /* overflow-y: auto; */}
 .site-nav .nav-item .dropdown-menu{ top: 0; left: 180px; min-width: 100%; }
 
 .sidebar.slim .site-nav .nav-item .dropdown-menu{ left: 56px; min-width: 180px;}
@@ -237,6 +237,9 @@ button:hover{ opacity: .8;}
 
 }
 
+@media (max-height: 600px) {
+body{ zoom: .6;}
+}
 
 /* main */
 
