--- a/sht/assets/style.css
+++ b/sht/assets/style.css
@@ -38,6 +38,16 @@ button:hover{ opacity: .8;}
 .form-control-sm{ padding: 0 3px; height: 31px; line-height: 31px; border: 1px solid #DFDFDF; border-radius: 3px;}
 .form-control-sm:focus{ outline: none;}
 
+/* nice-select */
+.nice-select-group + .nice-select-group{ margin-left: 20px;}
+.nice-select-group label{ display: inline-block;}
+.nice-select,
+.nice-select.open{ float: none; display: inline-block; height: 36px; line-height: 34px; border-color: #CCC;}
+.nice-select{ min-width: 180px;}
+.nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus{ background-color: #E5EEF7;}
+.nice-select .list{ width: 100%; box-shadow: 0 2px 4px 0 rgba(0,0,0,0.15);}
+
+
 @media (min-width: 768px) {
 .form-control{ width: auto;}
 }
@@ -151,7 +161,7 @@ button:hover{ opacity: .8;}
 .dropdown-menu>li>a{ padding: 6px 20px;}
 .dropdown-menu>li>a:hover{ background-color: #DEEAF6;}
 .dropdown.justified .dropdown-toggle,
-.dropdown.justified .dropdown-menu{ min-width: auto; max-width: 240px;}
+.dropdown.justified .dropdown-menu{ min-width: 180px; max-width: 240px;}
 .dropdown.justified .dropdown-toggle{ position: relative; text-align: left;}
 .dropdown.justified .dropdown-toggle .caret{ position: absolute; top: 14px; right: 12px;}
 .dropdown.justified .dropdown-menu li a{ text-overflow: ellipsis; white-space: nowrap; overflow: hidden;}
@@ -162,7 +172,6 @@ button:hover{ opacity: .8;}
 
 .dropdown.justified.narrower .dropdown-toggle,
 .dropdown.justified.narrower .dropdown-menu{ min-width: 120px; max-width: 180px;}
-
 
 .dropdown .dropdown-menu li.with-input{ padding: 6px 20px;}
 .dropdown .dropdown-menu li.with-input .form-control{ width: 100%;}
